tests/vrs/imports/import_07_circular_expect.txt
error: circular dependency detected:
  tests/vrs/imports/import_07_circular_2.vrs -> tests/vrs/imports/import_07_circular_3.vrs -> tests/vrs/imports/import_07_circular_2.vrs
     --> tests/vrs/imports/import_07_circular_3.vrs:1:13
      |
    1 |  import      import_07_circular_2;
      |              ^^^^^^^^^^^^^^^^^^^^ try removing the following import
error: failed to resolve tests/vrs/imports/import_07_circular_3.vrs
     --> tests/vrs/imports/import_07_circular_2.vrs:1:13
      |
    1 |  import      import_07_circular_3;
      |              ^^^^^^^^^^^^^^^^^^^^ Imported from here.
error: failed to resolve tests/vrs/imports/import_07_circular_2.vrs
     --> tests/vrs/imports/import_07_circular_1.vrs:1:13
      |
    1 |  import      import_07_circular_2;
      |              ^^^^^^^^^^^^^^^^^^^^ Imported from here.
error: failed to resolve tests/vrs/imports/import_07_circular_1.vrs
     --> tests/vrs/imports/import_07_circular.vrs:1:13
      |
    1 |  import      import_07_circular_1;
      |              ^^^^^^^^^^^^^^^^^^^^ Imported from here.
